--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -8,6 +8,11 @@
 
 html {
     font-size: 62.5%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after { 
+    box-sizing: inherit;
 }
 
 body {
@@ -15,9 +20,20 @@ body {
     font-family: 'Krub', sans-serif;
 }
 
-.titulo {
-    text-align: center;
+h1 {
     font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1, h2, h3 {
+    text-align: center;
 }
 
 .titulo span{
@@ -25,8 +41,28 @@ body {
 }
 
 .contenedor {
-    width: 120rem;
+    max-width: 120rem;
     margin: 0 auto 0 auto;
+}
+
+.boton {
+    background-color: var(--secundario);
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: .5rem;
+   width: 90%;
+   text-align: center;
+}
+
+@media (min-width: 480px) {
+    .boton {
+        width: auto;
+    }
 }
 
 .nav-bg {
@@ -35,11 +71,21 @@ body {
 
 .navegacion-principal {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    
+}
+
+@media (min-width: 768px) {
+    .navegacion-principal {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .navegacion-principal a {
-   color: var(--blanco);
+   display: block;
+   text-align: center;
+    color: var(--blanco);
    text-decoration: none;
    font-size: 2rem;
    font-weight: 700;
@@ -50,3 +96,35 @@ body {
     background-color: var(--primario);
     color: var(--oscuro);
 }
+
+.hero {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+}
+
+.contenido-hero {
+    position: absolute;
+    background-color: rgba(0, 0, 0, .4);/*Sintaxis anterior*/
+    background-color: rgb(0 0 0 / 70% );/*Sintaxis actual*/
+    width: 100%;
+    height: 100%;
+    /*este bloque de codigo se puede usar para alinear tanto vertical como horizontalmente
+    se puede usar en todos los proyectos*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contenido-hero h2, .contenido-hero p{
+    color: var(--blanco);
+}
+
+.ubicacion {
+    display: flex;
+    align-items: flex-end;
+}
+
