--- a/freelancer_inicio/css/styles.css
+++ b/freelancer_inicio/css/styles.css
@@ -1,14 +1,23 @@
+/* Paleta de colores*/
 :root {
     --blanco: #ffffff;
     --oscuro: #212121;
     --primario: #FFC107;
     --secundario: #0097A7;
     --gris: #757575;
+    --grisClaro: #DFE9F3;
 }
-
+/* Globales */
 html {
     font-size: 62.5%;
-    box-sizing: border-box;
+    box-sizing: border-box;  /* Hack para Box Model */
+    scroll-snap-type: y mandatory; /* Para el scroll snap hacia abajo*/
+}
+
+/*Scroll Snapp*/
+.servicios, .navegacion-principal, .formulario { /*No soporta todos los navegadores*/
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 *, *:before, *:after { 
@@ -18,26 +27,7 @@ html {
 body {
     font-size: 16px; /* 1rem = 10px */
     font-family: 'Krub', sans-serif;
-}
-
-h1 {
-    font-size: 3.8rem;
-}
-
-h2 {
-    font-size: 2.8rem;
-}
-
-h3 {
-    font-size: 1.8rem;
-}
-
-h1, h2, h3 {
-    text-align: center;
-}
-
-.titulo span{
-    font-size: 2rem;
+    background-image: linear-gradient(to top, var(--grisClaro) 0%, var(--blanco) 100%); /* Degradado de abajo hacia arriba*/
 }
 
 .contenedor {
@@ -57,6 +47,7 @@ h1, h2, h3 {
     border-radius: .5rem;
    width: 90%;
    text-align: center;
+   border: none;
 }
 
 @media (min-width: 480px) {
@@ -65,6 +56,60 @@ h1, h2, h3 {
     }
 }
 
+.boton:hover {
+    cursor: pointer;
+}
+
+.sombra {
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.54); /* Opcional*/
+        -moz-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.54); /* opcional*/
+        box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.54);
+        background-color: var(--blanco);
+        padding: 2rem;
+        border-radius: 1rem;
+}
+/* Tipografia */
+h1 {
+    font-size: 3.8rem;
+}
+
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1, h2, h3 {
+    text-align: center;
+}
+
+/* Titulos */
+.titulo span{
+    font-size: 2rem;
+}
+
+/*Utilidades*/
+.w-sm-100 {
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .w-100 {
+        width: auto;
+    }
+}
+
+.flex {
+    display: flex;
+}
+
+.alinear-derecha {
+    justify-content: flex-end;
+}
+
+/* Navegacion principal */
 .nav-bg {
     background-color: var(--secundario);
 }
@@ -103,6 +148,7 @@ h1, h2, h3 {
     background-size: cover;
     height: 450px;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .contenido-hero {
@@ -119,12 +165,114 @@ h1, h2, h3 {
     justify-content: center;
 }
 
-.contenido-hero h2, .contenido-hero p{
+.contenido-hero h2, 
+.contenido-hero p{
     color: var(--blanco);
 }
 
-.ubicacion {
+.contenido-hero .ubicacion {
     display: flex;
     align-items: flex-end;
 }
 
+
+/* Servicios */
+@media (min-width: 768px) {
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /*esto es igual que
+        grid-tempalte-columns: 33.3% 33.3% 33.3%
+        grid-template-columns: 1fr 1fr 1fr*/
+        column-gap: 1rem;
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/*Contacto*/
+.formulario {
+    background-color: var(--gris);
+    width: min(60rem, 100%); /*Utilizar el valor mas pequenho*/
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 1rem;
+}
+
+.formulario fieldset {
+    border: none;
+
+}
+
+.formulario legend {
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 2rem;
+    color: var(--primario);
+}
+
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto 20rem;
+        column-gap: 1rem;
+    }
+
+    .campo:nth-child(3), .campo:nth-child(4){ /*Inicia desde 1, no desde 0*/
+        grid-column: 1 / 3; /*Inicia en la columna 1 y termina en la 3*/
+    }
+}
+
+.campo {
+margin-bottom: 1rem;
+}
+
+.campo label {
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
+}
+
+.input-text {
+    width: 100%;
+    padding: 1.5rem;
+    border: none;
+    border-radius: .5rem;
+    border: 1px solid var(--grisClaro);
+}
+
+.campo textarea {
+    height: 20rem;
+}
+
+/*Footer*/
+.footer{
+    text-align: center;
+}
