--- a/FrontEndStore/css/styles.css
+++ b/FrontEndStore/css/styles.css
@@ -36,7 +36,7 @@ a {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
 }
 
 .contenedor {
@@ -130,11 +130,6 @@ h3 {
     padding: 1rem;
 }
 
-.producto__imagen {
-    width: 100%;
-}
-
-
 .producto__nombre {
     font-size: 4rem;
 }
@@ -193,7 +188,6 @@ h3 {
 
 .nosotros__imagen {
     grid-row: 1 / 2;
-    width: 100%;
 }
 
 @media (min-width: 768px) {
@@ -221,9 +215,53 @@ h3 {
 }
 
 .bloque__imagen {
-    width: 100%;
 }
 
 .bloque__titulo {
     margin: 0;
+}
+
+/*Pagina del producto*/
+
+@media (min-width: 768px) {
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.formulario {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.formulario__campo {
+    border-color: var(--primarioOscuro);
+    border-width: 1rem;
+    border-style: solid;
+    /*border: 1rem solid var(--primarioOscuro); esto es lo mismo que las 3 lineas anteriores*/
+    background-color: transparent;
+    /*color: var(--blanco);*/
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+    /*appearance: none; quita el estilo de la flechita del select del navegador*/
+    grid-column: 1 / 3;
+}
+
+.formulario__submit {
+   background-color: var(--secundario);
+   border: none;
+   font-size: 2rem;
+   font-family: var(--fuentePrincipal);
+   padding: 2rem; 
+   transition: background-color .3s ease;
+}
+
+.formulario__submit:hover {
+    cursor: pointer;
+    background-color: var(--secundarioOscuro);
+
 }
